# TaskMaster

./: CMakeLists.txt  README.md
config/: script.sh  taskmaster.yml  test1.yml
include/: config_parser.hpp  logger.hpp  process_manager.hpp  program_config.hpp  shell.hpp  taskmaster.hpp
src/: config_parser.cpp  logger.cpp  main.cpp  process_manager.cpp  shell.cpp  taskmaster.cpp
